kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    run: client
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    run: client
