kube/ingress.dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  namespace: develop
spec:
  rules:
  - host: dev.koleg.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: koleg-client
            port:
              number: 8080
