kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  namespace: master
spec:
  rules:
  - host: koleg.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: koleg-client
            port:
              number: 80
